// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <header
    className="huge-spacer-top big-spacer-bottom padded"
  >
    <h1
      className="text-center huge big-spacer-bottom"
    >
      my_account.create_new.TRK
    </h1>
    <p
      className="text-center big"
    >
      onboarding.create_project.select_method
    </p>
  </header>
  <div
    className="create-project-modes huge-spacer-top display-flex-space-around"
  >
    <button
      className="button button-huge display-flex-column create-project-mode-type-manual"
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        height={80}
        src="/images/sonarcloud/analysis/manual.svg"
        width={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.manual
      </div>
    </button>
    <button
      className="button button-huge big-spacer-left display-flex-column create-project-mode-type-bbs"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        height={80}
        src="/images/alm/bitbucket.svg"
        width={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.from_bbs
      </div>
    </button>
  </div>
</Fragment>
`;

exports[`should render correctly: loading bbs instances 1`] = `
<Fragment>
  <header
    className="huge-spacer-top big-spacer-bottom padded"
  >
    <h1
      className="text-center huge big-spacer-bottom"
    >
      my_account.create_new.TRK
    </h1>
    <p
      className="text-center big"
    >
      onboarding.create_project.select_method
    </p>
  </header>
  <div
    className="create-project-modes huge-spacer-top display-flex-space-around"
  >
    <button
      className="button button-huge display-flex-column create-project-mode-type-manual"
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        height={80}
        src="/images/sonarcloud/analysis/manual.svg"
        width={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.manual
      </div>
    </button>
    <button
      className="button button-huge big-spacer-left display-flex-column create-project-mode-type-bbs"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        height={80}
        src="/images/alm/bitbucket.svg"
        width={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.from_bbs
      </div>
      <span>
        onboarding.create_project.check_bbs_supported
        <i
          className="little-spacer-left spinner"
        />
      </span>
    </button>
  </div>
</Fragment>
`;

exports[`should render correctly: no bbs instances 1`] = `
<Fragment>
  <header
    className="huge-spacer-top big-spacer-bottom padded"
  >
    <h1
      className="text-center huge big-spacer-bottom"
    >
      my_account.create_new.TRK
    </h1>
    <p
      className="text-center big"
    >
      onboarding.create_project.select_method
    </p>
  </header>
  <div
    className="create-project-modes huge-spacer-top display-flex-space-around"
  >
    <button
      className="button button-huge display-flex-column create-project-mode-type-manual"
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        height={80}
        src="/images/sonarcloud/analysis/manual.svg"
        width={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.manual
      </div>
    </button>
    <button
      className="button button-huge big-spacer-left display-flex-column create-project-mode-type-bbs"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        height={80}
        src="/images/alm/bitbucket.svg"
        width={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.from_bbs
      </div>
      <div
        className="text-muted small spacer-top"
        style={
          Object {
            "lineHeight": 1.5,
          }
        }
      >
        onboarding.create_project.bbs_not_configured
        <HelpTooltip
          className="little-spacer-left"
          overlay="onboarding.create_project.zero_bbs_instances"
        />
      </div>
    </button>
  </div>
</Fragment>
`;

exports[`should render correctly: too many bbs instances 1`] = `
<Fragment>
  <header
    className="huge-spacer-top big-spacer-bottom padded"
  >
    <h1
      className="text-center huge big-spacer-bottom"
    >
      my_account.create_new.TRK
    </h1>
    <p
      className="text-center big"
    >
      onboarding.create_project.select_method
    </p>
  </header>
  <div
    className="create-project-modes huge-spacer-top display-flex-space-around"
  >
    <button
      className="button button-huge display-flex-column create-project-mode-type-manual"
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        height={80}
        src="/images/sonarcloud/analysis/manual.svg"
        width={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.manual
      </div>
    </button>
    <button
      className="button button-huge big-spacer-left display-flex-column create-project-mode-type-bbs"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        height={80}
        src="/images/alm/bitbucket.svg"
        width={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.from_bbs
      </div>
      <div
        className="text-muted small spacer-top"
        style={
          Object {
            "lineHeight": 1.5,
          }
        }
      >
        onboarding.create_project.bbs_not_configured
        <HelpTooltip
          className="little-spacer-left"
          overlay="onboarding.create_project.too_many_bbs_instances_X.2"
        />
      </div>
    </button>
  </div>
</Fragment>
`;
